--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
         { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: 'Arnab.jpg', position: 'Goalkeeper' },
         { id: 'gk4', name: 'Dhruv', basePrice: 400000, img: 'Dhruv.jpg', position: 'Goalkeeper' },
         { id: 'gk5', name: 'Rupayan Chakraborty', basePrice: 400000, img: 'Rupayan.jpg', position: 'Goalkeeper' },
-        { id: 'gk6', name: 'Soumodeep Dutta', basePrice: 400000, img: 'Soumadeep.jpg', position: 'Goalkeeper' },
+        { id: 'gk6', name: 'Soumadeep Dutta', basePrice: 400000, img: 'Soumadeep.jpg', position: 'Goalkeeper' },
       ],
       A: [
-        { id: 'a1', name: 'Soumik Mukherjee', basePrice: 600000, img: 'D:\Doc\Auction\Players\Players\Aditya', position: 'Defence' },
-        { id: 'a2', name: 'Suvam Chakraborty', basePrice: 600000, img: 'D:\Doc\Auction\Players\Players\Aditya', position: 'Defence' },
-        { id: 'a3', name: 'Jeffin Mathew', basePrice: 600000, img: 'D:\Doc\Auction\Players\Players\Aditya', position: 'Midfield' },
-        { id: 'a4', name: 'Risove Show', basePrice: 600000, img: 'D:\Doc\Auction\Players\Players\Aditya', position: 'Midfield' },
-        { id: 'a5', name: 'Vasu Gupta', basePrice: 600000, img: 'D:\Doc\Auction\Players\Players\Aditya', position: 'Striker' },
+        { id: 'a1', name: 'Soumik Mukherjee', basePrice: 600000, img: 'Soumik.jpg', position: 'Defence' },
+        { id: 'a2', name: 'Suvam Chakraborty', basePrice: 600000, img: 'Suvam.jpg', position: 'Defence' },
+        { id: 'a3', name: 'Jeffin Mathew', basePrice: 600000, img: 'Jeff.jpg', position: 'Midfield' },
+        { id: 'a4', name: 'Risove Show', basePrice: 600000, img: 'Risove.jpg', position: 'Midfield' },
+        { id: 'a5', name: 'Vasu Gupta', basePrice: 600000, img: 'Vasu.jpg', position: 'Striker' },
       ],
       B: [
         { id: 'r1', name: 'Rahul Sarkar', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Rahul' },
