--- a/index.html
+++ b/index.html
@@ -242,32 +242,32 @@
         { id: 'a5', name: 'Vasu Gupta', basePrice: 600000, img: 'Vasu.jpg', position: 'Striker' },
       ],
       B: [
-        { id: 'r1', name: 'Rahul Sarkar', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Rahul' },
-        { id: 'a1', name: 'Akash Mukherjee', position: 'Midfield', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'b1', name: 'Biswajit Karmakar', position: 'Midfield', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'k1', name: 'Krishnendu Mondal', position: 'Midfield', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'ar1', name: 'Aritra Adhikari', position: 'Striker', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 's1', name: 'Sourav Acharya', position: 'Striker', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'su1', name: 'Supratim Sengupta', position: 'Striker', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'pr1', name: 'Proloy Malik', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'pu1', name: 'Pulak Dowari', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'sa1', name: 'Sanchay Bose', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'si1', name: 'Siddhant Ameria', position: 'Midfield', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'so1', name: 'Sourav Das', position: 'Midfield', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'k2', name: 'Kaustav Guha Mazumdar', position: 'Striker', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'sh1', name: 'Shivaditya Gunin', position: 'Striker', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'am1', name: 'Aman Pandey', position: 'Defence', basePrice: 500000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'ay1', name: 'Ayan Das', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'k3', name: 'Kingshuk Banerjee', position: 'Midfield', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'ar2', name: 'Arghadeep Das', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'di1', name: 'Dibwayan Trivedi', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'di2', name: 'Dipanjan Mazumder', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'sa2', name: 'Satyaki Sarkar', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'ya1', name: 'Yash Agarwal', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'su2', name: 'Subhayan Banerjee', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'an1', name: 'Ankit Aich', position: 'Defence', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'sa3', name: 'Sagnik Chakraborty', position: 'Midfield', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
-        { id: 'sh2', name: 'Shardendu Lahiri', position: 'Midfield', basePrice: 300000, img: 'D:\Doc\Auction\Players\Players\Aditya' },
+        { id: 'r1', name: 'Rahul Sarkar', position: 'Defence', basePrice: 500000, img: 'Rahul.jpg' },
+        { id: 'a1', name: 'Akash Mukherjee', position: 'Midfield', basePrice: 500000, img: 'AkashM.jpg' },
+        { id: 'b1', name: 'Biswajit Karmakar', position: 'Midfield', basePrice: 500000, img: 'Biswajit.jpg' },
+        { id: 'k1', name: 'Krishnendu Mondal', position: 'Midfield', basePrice: 500000, img: 'Krishnendu.jpg' },
+        { id: 'ar1', name: 'Aritra Adhikari', position: 'Striker', basePrice: 500000, img: 'Aritra.jpg' },
+        { id: 's1', name: 'Sourav Acharya', position: 'Striker', basePrice: 500000, img: 'SouravA.jpg' },
+        { id: 'su1', name: 'Supratim Sengupta', position: 'Striker', basePrice: 500000, img: 'Supratim.jpg' },
+        { id: 'pr1', name: 'Proloy Malik', position: 'Defence', basePrice: 500000, img: 'Proloy.jpg' },
+        { id: 'pu1', name: 'Pulak Dowari', position: 'Defence', basePrice: 500000, img: 'Pulak.jpg' },
+        { id: 'sa1', name: 'Sanchay Bose', position: 'Defence', basePrice: 500000, img: 'Sanchay.jpg' },
+        { id: 'si1', name: 'Siddhant Ameria', position: 'Midfield', basePrice: 500000, img: 'Siddhant.jpg' },
+        { id: 'so1', name: 'Sourav Das', position: 'Midfield', basePrice: 500000, img: 'SouravD.jpg' },
+        { id: 'k2', name: 'Kaustav Guha Mazumdar', position: 'Striker', basePrice: 500000, img: 'Kaustav.jpg' },
+        { id: 'sh1', name: 'Shivaditya Gunin', position: 'Striker', basePrice: 500000, img: 'Shivaditya.jpg' },
+        { id: 'am1', name: 'Aman Pandey', position: 'Defence', basePrice: 500000, img: 'Aman.jpg' },
+        { id: 'ay1', name: 'Ayan Das', position: 'Defence', basePrice: 300000, img: 'Ayan.jpg' },
+        { id: 'k3', name: 'Kingshuk Banerjee', position: 'Midfield', basePrice: 300000, img: 'Kingshuk.jpg' },
+        { id: 'ar2', name: 'Arghadeep Das', position: 'Defence', basePrice: 300000, img: 'Arghadeep.jpg' },
+        { id: 'di1', name: 'Dibwayan Trivedi', position: 'Defence', basePrice: 300000, img: 'Dibwayan.jpg' },
+        { id: 'di2', name: 'Dipanjan Mazumder', position: 'Defence', basePrice: 300000, img: 'Dipanjan.jpg' },
+        { id: 'sa2', name: 'Satyaki Sarkar', position: 'Defence', basePrice: 300000, img: 'Satyaki.jpg' },
+        { id: 'ya1', name: 'Yash Agarwal', position: 'Defence', basePrice: 300000, img: 'Yash.jpg' },
+        { id: 'su2', name: 'Subhayan Banerjee', position: 'Defence', basePrice: 300000, img: 'Subhayan.jpg' },
+        { id: 'an1', name: 'Ankit Aich', position: 'Defence', basePrice: 300000, img: 'Ankit.jpg' },
+        { id: 'sa3', name: 'Sagnik Chakraborty', position: 'Midfield', basePrice: 300000, img: 'Sagnik.jpg' },
+        { id: 'sh2', name: 'Shardendu Lahiri', position: 'Midfield', basePrice: 300000, img: 'Shardendu.jpg' },
       ],
     };
 
