--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: 'Arnab.jpg', position: 'Goalkeeper' },
         { id: 'gk4', name: 'Dhruv', basePrice: 400000, img: 'Dhruv.jpg', position: 'Goalkeeper' },
         { id: 'gk5', name: 'Rupayan Chakraborty', basePrice: 400000, img: 'Rupayan.jpg', position: 'Goalkeeper' },
-        { id: 'gk6', name: 'Soumadeep Dutta', basePrice: 400000, img: 'Soumadeep.jpg', position: 'Goalkeeper' },
+        { id: 'gk6', name: 'Soumadeep Dutta', basePrice: 400000, img: 'Soumodeep.jpg', position: 'Goalkeeper' },
       ],
       A: [
         { id: 'a1', name: 'Soumik Mukherjee', basePrice: 600000, img: 'Soumik.jpg', position: 'Defence' },
