--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         { id: 'ay1', name: 'Ayan Das', position: 'Defence', basePrice: 300000, img: 'Ayan.jpg' },
         { id: 'k3', name: 'Kingshuk Banerjee', position: 'Midfield', basePrice: 300000, img: 'Kingshuk.jpg' },
         { id: 'ar2', name: 'Arghadeep Das', position: 'Defence', basePrice: 300000, img: 'Arghadeep.jpg' },
-        { id: 'di1', name: 'Dibwayan Trivedi', position: 'Defence', basePrice: 300000, img: 'Dibwayan.jpg' },
+        { id: 'di1', name: 'Dibwayan Trivedi', position: 'Defence', basePrice: 300000, img: 'Dibyawan.jpg' },
         { id: 'di2', name: 'Dipanjan Mazumder', position: 'Defence', basePrice: 300000, img: 'Dipanjan.jpg' },
         { id: 'sa2', name: 'Satyaki Sarkar', position: 'Defence', basePrice: 300000, img: 'Satyaki.jpg' },
         { id: 'ya1', name: 'Yash Agarwal', position: 'Defence', basePrice: 300000, img: 'Yash.jpg' },
