--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       }
       dom.currentPlayerCard.hidden = false;
       const { player, category, bid } = state.current;
-      dom.playerImg.src = Default.jpg || 'https://images.unsplash.com/photo-1517649763962-0c623066013b?q=80&w=800&auto=format&fit=crop';
+      dom.playerImg.src = player.img || 'https://images.unsplash.com/photo-1517649763962-0c623066013b?q=80&w=800&auto=format&fit=crop';
       dom.playerName.textContent = player.name;
       dom.playerCat.textContent = catLabel(category);
       dom.playerPosition.textContent = player.position || '';
