--- a/index.html
+++ b/index.html
@@ -286,5 +286,11 @@
     })();
   </script>
 
+<!-- Footer with credit -->
+<footer class="text-center text-xs text-slate-400 mt-12 mb-4">
+  Created by Jyotishka &mdash; Independence Cup 2025
+</footer>
+  
 </body>
 </html>
+
