--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
 
   </div>
 
+  <!-- Footer placed outside the grid -->
+  <footer class="text-center text-xs text-slate-400 mt-12 mb-4 w-full max-w-7xl mx-auto px-4">
+    Created by Jyotishka &mdash; Independence Cup 2025
+  </footer>
+  
   <script>
     (() => {
       const loginForm = document.getElementById('loginForm');
@@ -285,12 +290,8 @@
       });
     })();
   </script>
-
-<!-- Footer with credit -->
-<footer class="text-center text-xs text-slate-400 mt-12 mb-4">
-  Created by Jyotishka &mdash; Independence Cup 2025
-</footer>
   
 </body>
 </html>
+
 
