--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 <body class="bg-slate-50 text-slate-900 flex justify-center items-start min-h-screen p-6">
 
   <div class="max-w-7xl w-full grid grid-cols-1 md:grid-cols-3 gap-10">
-
     <!-- Left/Center info section spanning 2 columns on md and above -->
     <section class="md:col-span-2 bg-white rounded-2xl shadow p-6 content-scroll">
       <h1 class="text-3xl font-bold mb-6">Independence Cup 2025</h1>
-
       <div class="mb-6 space-y-4">
         <p><strong>📅 Event Date</strong><br>24 August 2025</p>
         <p><strong>📍 Venue</strong><br>Turf XL</p>
@@ -36,9 +34,7 @@
         <p><strong>👥 Captains</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan & Akash Jr</p>
         <p><strong>⚽ Number of Teams</strong><br>6</p>
       </div>
-
       <h2 class="text-xl font-semibold mb-4">🏆 Independence Cup 2025 – Tournament Guidelines 🏆</h2>
-
       <div class="space-y-4 text-sm text-slate-700 leading-relaxed">
         <section>
           <h3 class="font-semibold mb-1">Event Overview</h3>
@@ -47,7 +43,6 @@
             <li>An opportunity to enjoy competitive play, sportsmanship, and camaraderie.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Important Notice</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -55,7 +50,6 @@
             <li>Teams must carry their own medical kits and individual water bottles.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Field & Equipment</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -63,7 +57,6 @@
             <li>Ball: Regulation Size 5 football.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Team Composition</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -73,7 +66,6 @@
             <li>Maximum 6 players on the field at once; rolling substitutions.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Attire & Equipment</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -82,7 +74,6 @@
             <li>No sharp accessories; nails must be trimmed.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Match Format</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -93,7 +84,6 @@
             <li>Teams with fewer than 6 players at kick-off will play with available members.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Competition Structure</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -104,7 +94,6 @@
             <li>Knockouts: Semi-finals, 3rd place match, and Final.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Kick-off & Restarts</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -112,7 +101,6 @@
             <li>After goals, restart from center spot by opposing team.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Fouls & Misconduct</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -124,7 +112,6 @@
             <li>Violent conduct may lead to disqualification.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Free Kicks, Corners & Throw-ins</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -135,7 +122,6 @@
             <li>Standard corner and throw-in rules apply.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Tie-breakers (Knockout Stage)</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -144,7 +130,6 @@
             <li>If still tied → Goal Difference → Goals Scored → Coin Toss.</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Awards & Recognition</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -154,16 +139,12 @@
             <li>🎯 Individual Awards: Top Goal Scorer, Best Goalkeeper, Playmaker, Best Defender, Man of the Match</li>
           </ul>
         </section>
-
         <section>
           <h3 class="font-semibold mb-1">Closing Ceremony</h3>
           <p>Award distribution begins post 5:00 PM.</p>
         </section>
-
         <hr class="my-6 border-t border-slate-300" />
-
         <h2 class="text-xl font-semibold mb-2">Independence Cup 2025 Auction Rulebook – 6 Teams, 8 Players Each</h2>
-
         <ol class="list-decimal list-inside space-y-3 text-sm">
           <li>
             <strong>Team Composition</strong><br />
@@ -231,41 +212,34 @@
     <!-- Right: Login Form -->
     <aside class="bg-white rounded-2xl shadow p-6 h-fit w-full max-w-md">
       <h2 class="text-2xl font-bold mb-6">Admin Login</h2>
-
       <form id="loginForm" novalidate>
         <div class="mb-4">
           <label for="email" class="block font-medium text-slate-700 mb-1">Email</label>
-          <input type="email" id="email" name="email" placeholder="....@org.com" required
+          <input type="email" id="email" name="email" placeholder="jyotishka27@org.com" required
             class="w-full border rounded-xl px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
         </div>
-
         <div class="mb-4">
           <label for="password" class="block font-medium text-slate-700 mb-1">Password</label>
           <input type="password" id="password" name="password" placeholder="Enter password" required
             class="w-full border rounded-xl px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
         </div>
-
         <div id="errorMsg" class="error" role="alert" aria-live="assertive"></div>
-
         <button type="submit"
           class="w-full bg-blue-600 text-white font-semibold py-2 rounded-xl hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-600">
           Login as Admin
         </button>
       </form>
     </aside>
-
   </div>
 
-  <!-- Footer placed outside the grid -->
   <footer class="text-center text-xs text-slate-400 mt-12 mb-4 w-full max-w-7xl mx-auto px-4">
     Created by Jyotishka &mdash; Independence Cup 2025
   </footer>
-  
+
   <script>
     (() => {
       const loginForm = document.getElementById('loginForm');
       const errorMsg = document.getElementById('errorMsg');
-
       const ADMIN_EMAIL = 'jyotishka27@org.com';
       const ADMIN_PASSWORD = 'Leavemealoner8@';
 
@@ -282,7 +256,6 @@
         }
 
         if (email.toLowerCase() === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
-          // Redirect to your auction page:
           window.location.href = 'football_auctioneer.html';
         } else {
           errorMsg.textContent = 'Invalid email or password.';
@@ -290,8 +263,6 @@
       });
     })();
   </script>
-  
+
 </body>
 </html>
-
-
