--- a/football_auctioneer.html
+++ b/football_auctioneer.html
@@ -20,9 +20,35 @@
         visibility: hidden;
       }
     }
-    .scroll-smooth {
+    /*.scroll-smooth {
       scroll-behavior: smooth;
     }
+	*/
+	  
+    /* Fixed aspect ratio container for player images */
+    .player-img-container {
+      position: relative;
+      width: 100%;
+      aspect-ratio: 16 / 9; /* adjust ratio as needed */
+      overflow: hidden;
+      border: 1px solid #CBD5E0; /* Tailwind border color */
+      border-radius: 0.75rem; /* rounded-xl */
+      background-color: #F1F5F9; /* slate-100 */
+    }
+    .player-img-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      object-position: center center;
+      display: block;
+    }
+    button:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+  </style>
+</head>
+	  
     img[alt="player"] {
       object-fit: cover;
     }
