--- a/football_auctioneer.html
+++ b/football_auctioneer.html
@@ -20,11 +20,10 @@
         visibility: hidden;
       }
     }
-    /*.scroll-smooth {
+    .scroll-smooth {
       scroll-behavior: smooth;
     }
-	*/
-	  
+		  
     /* Fixed aspect ratio container for player images */
     .player-img-container {
       position: relative;
@@ -42,7 +41,7 @@
       object-position: center center;
       display: block;
     }
-    button:disabled {
+    button: disabled {
       cursor: not-allowed;
       opacity: 0.5;
     }
