--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
           Login as Admin
         </button>
       </form>
+      <p class="mt-4 text-center text-sm text-blue-600 hover:underline cursor-pointer">
+        <a href="Captain_dashboard.html" tabindex="0" aria-label="Go to Team Captain Login Page">Team Captain Login</a>
+      </p>
     </aside>
   </div>
 
@@ -262,4 +265,5 @@
 
 </body>
 </html>
+
 
