--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </button>
       </form>
       <p class="mt-4 text-center text-sm text-blue-600 hover:underline cursor-pointer">
-        <a href="Captain_dashboard.html" tabindex="0" aria-label="Go to Team Captain Login Page">Team Captain Login</a>
+        <a href="captain_dashboard.html" tabindex="0" aria-label="Go to Team Captain Login Page">Team Captain Login</a>
       </p>
     </aside>
   </div>
@@ -265,5 +265,6 @@
 
 </body>
 </html>
+
 
 
