--- a/football_auctioneer.html
+++ b/football_auctioneer.html
@@ -59,7 +59,7 @@
   <!-- HEADER -->
   <header class="sticky top-0 z-40 bg-white/90 backdrop-blur border-b border-slate-200">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center gap-3">
-      <div class="text-xl font-bold">⚽ Football Auctioneer</div>
+      <div class="text-xl font-bold">⚽ Independence Cup 2025 Auction</div>
       <nav class="ml-auto flex items-center gap-2 text-sm">
         <button id="btnSaveState" class="px-3 py-1.5 rounded-xl bg-slate-900 text-white hover:opacity-90">Save</button>
         <label class="px-3 py-1.5 rounded-xl bg-slate-100 hover:bg-slate-200 cursor-pointer">Load
@@ -83,14 +83,13 @@
         <summary class="font-semibold cursor-pointer select-none">Information</summary>
         <div class="mt-3 text-sm text-slate-700 space-y-2">
           <p>
-            Update the <code>TEAMS</code> and <code>PLAYERS</code> data inside the <strong>"// = DATA YOU CAN EDIT ="</strong> section below.
-            Put image URLs if you have them. Base price is the minimum starting bid.
+            Base price is the minimum starting bid.
           </p>
           <ul class="list-disc pl-6">
             <li>Categories: <strong>BP: 4</strong>, <strong>BP: 6</strong>, <strong>BP: 3 & 5</strong></li>
             <li>Only the auctioneer uses this page. Teams call bids verbally.</li>
             <li>Timer starts at the <em>first</em> bid and resets to 45s after every new bid.</li>
-            <li>When timer hits 0, the player is sold to the highest bidder (if any).</li>
+            <li>When the timer hits 0, the player is sold to the highest bidder (if any).</li>
           </ul>
         </div>
       </details>
