--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -95,9 +95,9 @@
       { name: 'Ayon Roy', budget: 3500000 },
       { name: 'Subhojit Dutta', budget: 3000000 },
       { name: 'Ritam Chowdhury', budget: 4000000 },
-      { name: 'Shubhanjan Basu', budget: 2500000 },
+      { name: 'White Panthers', budget: 2500000 },
       { name: 'Srinjoy Kundu', budget: 3200000 },
-      { name: 'Subhamoy Das', budget: 2900000 },
+      { name: 'Amingos FC', budget: 2900000 },
     ];
 
     const SALES = [
@@ -190,3 +190,4 @@
   </script>
 </body>
 </html>
+
