--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -105,7 +105,7 @@
 
     // Player data with price included
     const SALES = [
-      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence', Captain },
+      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence'},
       { teamIndex: 0, playerName: 'Arnab Talukdar', position: 'Goalkeeper', price: 900000 },
       { teamIndex: 0, playerName: 'Sourav Acharya', position: 'Striker', price: 650000 },
       { teamIndex: 0, playerName: 'Proloy Malik', position: 'Defence', price: 1000000 },
@@ -238,3 +238,4 @@
   </script>
 </body>
 </html>
+
