--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -69,30 +69,45 @@
     tbody tr:hover {
       background-color: #E0F2FE; /* sky-100 */
     }
+    section + section {
+      margin-top: 3rem;
+    }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900 p-6">
   <main class="max-w-7xl mx-auto space-y-10">
-
     <h1 class="text-3xl font-bold mb-6 text-center">Independence Cup 2025</h1>
-
     <!-- Team Tabs -->
     <section class="bg-white rounded-2xl shadow p-6">
       <h2 class="text-xl font-semibold mb-4">Teams & Players</h2>
-
       <!-- Tabs -->
       <div id="tabs" class="tabs">
         <!-- Buttons inserted dynamically -->
       </div>
-
       <!-- Team content -->
       <div id="teamContent" class="content-scroll border border-slate-300 rounded-b-xl bg-white p-4 min-h-[250px]">
         <!-- Team players list here -->
       </div>
     </section>
 
+    <!-- Fixtures Section -->
+    <section class="bg-white rounded-2xl shadow p-6 content-scroll">
+      <h2 class="text-xl font-semibold mb-4">Upcoming Fixtures</h2>
+      <table>
+        <thead>
+          <tr class="bg-slate-100 text-slate-700 font-semibold border-b border-slate-300">
+            <th class="p-2 text-left">Date</th>
+            <th class="p-2 text-left">Time</th>
+            <th class="p-2 text-left">Match</th>
+            <th class="p-2 text-left">Venue</th>
+          </tr>
+        </thead>
+        <tbody id="fixturesBody">
+          <!-- Populated by JS -->
+        </tbody>
+      </table>
+    </section>
   </main>
-
   <script>
     const TEAMS = [
       { name: 'Ayon Roy' },
@@ -103,7 +118,6 @@
       { name: 'Subhamoy Das' },
     ];
 
-    // Player data with price included
     const SALES = [
       { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence', price: 0},
       { teamIndex: 0, playerName: 'Arnab Talukdar', position: 'Goalkeeper', price: 900000 },
@@ -112,7 +126,6 @@
       { teamIndex: 0, playerName: 'Siddhant Ameria', position: 'Midfield', price: 550000 },
       { teamIndex: 0, playerName: 'Kingshuk Banerjee', position: 'Midfield', price: 450000 },
       { teamIndex: 0, playerName: 'Aritra Adhikari', position: 'Striker', price: 50000 },
-
       { teamIndex: 1, playerName: 'Subhojit Dutta', position: 'Midfield', price: 0 },
       { teamIndex: 1, playerName: 'Soumadeep Dutta', position: 'Goalkeeper', price: 400000 },
       { teamIndex: 1, playerName: 'Jeffin Mathew', position: 'Midfield', price: 1250000 },
@@ -121,7 +134,6 @@
       { teamIndex: 1, playerName: 'Arghadeep Das', position: 'Defence', price: 450000 },
       { teamIndex: 1, playerName: 'Akash Mukherjee', position: 'Midfield', price: 350000 },
       { teamIndex: 1, playerName: 'Sourav Das', position: 'Midfield', price: 450000 },
-
       { teamIndex: 2, playerName: 'Ritam Chowdhury', position: 'Midfield', price: 0 },
       { teamIndex: 2, playerName: 'Dhruv', position: 'Goalkeeper', price: 400000 },
       { teamIndex: 2, playerName: 'Risove Show', position: 'Midfield', price: 1750000 },
@@ -129,7 +141,6 @@
       { teamIndex: 2, playerName: 'Satyaki Sarkar', position: 'Defence', price: 300000 },
       { teamIndex: 2, playerName: 'Ayan Das', position: 'Defence', price: 300000 },
       { teamIndex: 2, playerName: 'Dipanjan Mazumder', position: 'Defence', price: 300000 },
-
       { teamIndex: 3, playerName: 'Shubhanjan Basu', position: 'Midfield', price: 0 },
       { teamIndex: 3, playerName: 'Rupayan Chakraborty', position: 'Goalkeeper', price: 700000 },
       { teamIndex: 3, playerName: 'Soumik Mukherjee', position: 'Defence', price: 1300000 },
@@ -137,7 +148,6 @@
       { teamIndex: 3, playerName: 'Subhayan Banerjee', position: 'Defence', price: 300000 },
       { teamIndex: 3, playerName: 'Pulak Dowari', position: 'Defence', price: 1100000 },
       { teamIndex: 3, playerName: 'Sagnik Chakraborty', position: 'Midfield', price: 150000 },
-
       { teamIndex: 4, playerName: 'Srinjoy Kundu', position: 'Midfield', price: 0 },
       { teamIndex: 4, playerName: 'Arko Dutta', position: 'Goalkeeper', price: 500000 },
       { teamIndex: 4, playerName: 'Suvam Chakraborty', position: 'Defence', price: 800000 },
@@ -145,20 +155,22 @@
       { teamIndex: 4, playerName: 'Supratim Sengupta', position: 'Striker', price: 1000000 },
       { teamIndex: 4, playerName: 'Aman Pandey', position: 'Defence', price: 500000 },
       { teamIndex: 4, playerName: 'Ankit Aich', position: 'Defence', price: 450000 },
-
       { teamIndex: 5, playerName: 'Subhamoy Das', position: 'Midfield', price: 0 },
       { teamIndex: 5, playerName: 'Aditya Chakraborty', position: 'Goalkeeper', price: 400000 },
       { teamIndex: 5, playerName: 'Vasu Gupta', position: 'Striker', price: 1100000 },
       { teamIndex: 5, playerName: 'Krishnendu Mondal', position: 'Midfield', price: 550000 },
       { teamIndex: 5, playerName: 'Sanchay Bose', position: 'Defence', price: 750000 },
       { teamIndex: 5, playerName: 'Rahul Sarkar', position: 'Defence', price: 600000 },
-      { teamIndex: 5, playerName: 'Kaustav Guha Mazumdar', position: 'Striker', price: 500000 },
+      { teamIndex: 5, playerName: 'Kaustav Guha Mazumdar', position: 'Striker', price: 500000 }
     ];
 
-    function formatTime(iso8601) {
-      const options = { hour: '2-digit', minute: '2-digit', hour12: true };
-      return new Date(iso8601).toLocaleTimeString('en-US', options);
-    }
+    const FIXTURES = [
+      { date: '24 Aug 2025', time: '09:00 AM', match: 'Ayon Roy vs Subhojit Dutta', venue: 'Turf XL' },
+      { date: '24 Aug 2025', time: '11:00 AM', match: 'Ritam Chowdhury vs Shubhanjan Basu', venue: 'Turf XL' },
+      { date: '24 Aug 2025', time: '01:00 PM', match: 'Srinjoy Kundu vs Subhamoy Das', venue: 'Turf XL' },
+      { date: '24 Aug 2025', time: '03:00 PM', match: 'Semi-finals', venue: 'Turf XL' },
+      { date: '24 Aug 2025', time: '05:00 PM', match: 'Final Match', venue: 'Turf XL' }
+    ];
 
     function formatMoney(amount) {
       return '₹ ' + amount.toLocaleString('en-IN');
@@ -191,7 +203,7 @@
     }
 
     function renderTeamPlayers(teamIndex) {
-      const captainName = TEAMS[teamIndex].name;    
+      const captainName = TEAMS[teamIndex].name;
       const players = SALES.filter(s => s.teamIndex === teamIndex);
       teamContent.innerHTML = '';
 
@@ -231,16 +243,44 @@
       teamContent.appendChild(table);
     }
 
+    function renderFixtures() {
+      const tbody = document.getElementById('fixturesBody');
+      if(!tbody) return;
+      tbody.innerHTML = '';
+      FIXTURES.forEach(fixture => {
+        const tr = document.createElement('tr');
+        tr.className = 'hover:bg-slate-100';
+        tr.innerHTML = `
+          <td class="p-2">${fixture.date}</td>
+          <td class="p-2">${fixture.time}</td>
+          <td class="p-2">${fixture.match}</td>
+          <td class="p-2">${fixture.venue}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
     // Initialize tabs and content
     TEAMS.forEach((team, i) => {
       const tabBtn = createTabButton(team, i);
       tabsContainer.appendChild(tabBtn);
     });
-
     renderTeamPlayers(activeTeamIndex);
+    renderFixtures();
   </script>
+  <section class="bg-white rounded-2xl shadow p-6 content-scroll max-w-7xl mx-auto mt-10">
+    <h2 class="text-xl font-semibold mb-4">Upcoming Fixtures</h2>
+    <table class="min-w-full border border-slate-300 rounded-lg overflow-hidden text-left text-sm">
+      <thead class="bg-slate-100">
+        <tr>
+          <th class="p-2 border-b border-slate-300">Date</th>
+          <th class="p-2 border-b border-slate-300">Time</th>
+          <th class="p-2 border-b border-slate-300">Match</th>
+          <th class="p-2 border-b border-slate-300">Venue</th>
+        </tr>
+      </thead>
+      <tbody id="fixturesBody"></tbody>
+    </table>
+  </section>
 </body>
 </html>
-
-
-
